--- a/analytics.cabal
+++ b/analytics.cabal
@@ -17,6 +17,7 @@ executable analytics
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       base >= 4.7 && < 5,
+                       scotty
   other-modules:       Types,
                        DataProcessing
