--- a/analytics.cabal
+++ b/analytics.cabal
@@ -18,6 +18,7 @@ executable analytics
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5,
-                       scotty
+                       scotty,
+                       aeson
   other-modules:       Types,
                        DataProcessing
